[project]
name = "incycling-enrich-chemname"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "loguru>=0.7.3",
    "polars>=1.40.1",
    "pydantic>=2.13.3",
    "ratelimit>=2.2.1",
    "requests>=2.33.1",
    "requests-cache>=1.3.1",
    "typer>=0.25.0",
]

[dependency-groups]
dev = [
    "icecream>=2.2.0",
    "marimo>=0.23.4",
]
