[project]
name = "find-cas"
version = "0.1.0"
description = "CLI tool to resolve chemical compound names to CAS numbers via PubChem"
readme = "README.md"
requires-python = ">=3.12"
authors = [
    {name = "Philippe Costa", email = "philippe.sa.costa@gmail.com"},
]
dependencies = [
    "loguru>=0.7.3",
    "polars>=1.40.1",
    "pydantic>=2.13.3",
    "requests>=2.33.1",
    "requests-cache>=1.3.1",
    "requests-ratelimiter>=0.10.0",
    "typer>=0.25.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]

[project.scripts]
find-cas="app.main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/app"]
